# fast_zero

./: .coverage  .env  .gitignore  README.md  alembic.ini  database.db  pyproject.toml
fast_zero/: app.py  database.py  globais.py  models.py  schema.py
fast_zero/data/: database.csv
migrations/versions/: 238a4dea02e1_adicao_da_coluna_vip.py  247f875a8444_criacao_tabela_users.py
tests/: conftest.py  test_app.py  test_db.py
